--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,14 @@ WAVS_CLI_LOG_LEVEL="info, wavs_cli=debug"
 # Aggregator
 WAVS_AGGREGATOR_DATA=~/wavs/aggregator
 WAVS_AGGREGATOR_MNEMONIC="test test test test test test test test test test test junk"
+
+## Safe
+# Safe configuration - using Anvil's first default account address
+SAFE_OWNERS=0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266
+SAFE_THRESHOLD=1
+SAFE_FALLBACK_HANDLER=0x0000000000000000000000000000000000000000
+# Set to true to deploy a new Safe, false to use existing
+DEPLOY_NEW_SAFE=true
+# Only needed if DEPLOY_NEW_SAFE is false
+EXISTING_SAFE_ADDRESS=0x0000000000000000000000000000000000000000
+ENABLE_MODULE=true
