--- a/components/safe-guard/Cargo.toml
+++ b/components/safe-guard/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "eth-price-oracle"
+name = "safe-guard"
 edition.workspace = true
 version.workspace = true
 authors.workspace = true
@@ -7,14 +7,20 @@ rust-version.workspace = true
 repository.workspace = true
 
 [dependencies]
-wit-bindgen-rt = {workspace = true}
 wavs-wasi-chain = { workspace = true }
-serde = { workspace = true }
+serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
-alloy-sol-macro = { workspace = true }
-wstd = { workspace = true }
-alloy-sol-types = { workspace = true }
 anyhow = { workspace = true }
+wit-bindgen-rt = { workspace = true, features = ["bitflags"] }
+alloy-sol-types = { workspace = true }
+hex = "0.4.3"
+ethabi = "18.0.0"
+primitive-types = "0.13.1"
+alloy-primitives = "0.8.13"
+base64 = "0.22.1"
+
+[dev-dependencies]
+mockall = "0.11"
 
 [lib]
 crate-type = ["cdylib"]
@@ -27,5 +33,5 @@ strip = true
 lto = true
 
 [package.metadata.component]
-package = "component:eth-price-oracle"
-target = "wavs:worker/layer-trigger-world@0.3.0"
+package = "component:safe-guard"
+target = "wavs:worker/layer-trigger-world@0.3.0-beta"
