--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@commitlint/config-conventional": "19.2.2",
     "@defi-wonderland/natspec-smells": "1.1.6",
     "@openzeppelin/contracts": "^5.2.0",
+    "@gnosis.pm/safe-contracts": "github:safe-global/safe-smart-account#v1.4.1-3",
     "@wavs/solidity": "^0.3.0",
     "forge-std": "github:foundry-rs/forge-std#v1.9.6",
     "lint-staged": ">=10",
