--- a/components/safe-guard/Cargo.toml
+++ b/components/safe-guard/Cargo.toml
@@ -34,4 +34,4 @@ lto = true
 
 [package.metadata.component]
 package = "component:safe-guard"
-target = "wavs:worker/layer-trigger-world@0.3.0-beta"
+target = "wavs:worker/layer-trigger-world@0.3.0"
