Consolidate workspace deps

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,11 @@ anyhow = "1.0.95"
 ## Alloy
 alloy-sol-macro = { version = "0.8.13", features = ["json"]}
 alloy-sol-types = "0.8.13"
+alloy-primitives = "0.8.13"
+
+## Common dependencies
+hex = "0.4.3"
+ethabi = "18.0.0"
+primitive-types = "0.13.1"
+base64 = "0.22.1"
+mockall = "0.11"
