--- a/components/dao-agent/Cargo.toml
+++ b/components/dao-agent/Cargo.toml
@@ -18,6 +18,7 @@ hex = { workspace = true }
 ethabi = { workspace = true }
 primitive-types = { workspace = true }
 alloy-primitives = { workspace = true }
+tiny-keccak = { version = "2.0", features = ["keccak"] }
 
 [dev-dependencies]
 mockall = { workspace = true }
