Refactor ABI encoding

--- a/components/dao-agent/Cargo.toml
+++ b/components/dao-agent/Cargo.toml
@@ -14,11 +14,11 @@ serde_json = { workspace = true }
 anyhow = { workspace = true }
 wit-bindgen-rt = { workspace = true, features = ["bitflags"] }
 alloy-sol-types = { workspace = true }
-hex = { workspace = true }
-ethabi = { workspace = true }
-primitive-types = { workspace = true }
 alloy-primitives = { workspace = true }
-tiny-keccak = { version = "2.0", features = ["keccak"] }
+alloy-json-abi = { workspace = true }
+alloy-dyn-abi = { workspace = true }
+hex = { workspace = true }
+tiny-keccak = { workspace = true }
 
 [dev-dependencies]
 mockall = { workspace = true }
