--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,9 +26,12 @@ serde_json = "1.0.138"
 anyhow = "1.0.95"
 
 ## Alloy
+alloy-dyn-abi = "0.8.13"
+alloy-json-abi = "0.8.13"
+alloy-primitives = "0.8.13"
 alloy-sol-macro = { version = "0.8.13", features = ["json"]}
 alloy-sol-types = "0.8.13"
-alloy-primitives = "0.8.13"
+
 
 ## Common dependencies
 hex = "0.4.3"
@@ -36,3 +39,4 @@ ethabi = "18.0.0"
 primitive-types = "0.13.1"
 base64 = "0.22.1"
 mockall = "0.11"
+tiny-keccak = { version = "2.0", features = ["keccak"] }
