Load config from uri, docs

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,9 @@ WAVS_ENV_OLLAMA_API_URL="http://localhost:11434"
 WAVS_ENV_OPENAI_API_KEY="your-openai-key-here"
 WAVS_ENV_OPENAI_API_URL="https://api.openai.com/v1/chat/completions"
 
+# IPFS
+WAVS_ENV_IPFS_GATEWAY_URL="https://gateway.lighthouse.storage"
+
 # WAVS
 WAVS_DATA=~/wavs/data
 WAVS_LOG_LEVEL="info"
