More notes / Dockerize ollama

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,3 +75,22 @@ services:
       - "./:/wavs"
       - "./.docker:/root/wavs/cli/"
     network_mode: "host"
+
+  ollama:
+    image: "ollama/ollama"
+    container_name: "ollama"
+    ports:
+      - "11434:11434"
+    volumes:
+      - ollama-data:/root/.ollama
+    entrypoint: ["/bin/sh", "-c"]
+    command:
+      - |
+        ollama serve &
+        sleep 5
+        ollama pull llama3.2
+        wait
+    restart: unless-stopped
+
+volumes:
+  ollama-data:
