Add IPFS WASM Component for WIT Practice

--- a/packages/wavs-ipfs/Cargo.toml
+++ b/packages/wavs-ipfs/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "wavs-agent"
+name = "wavs-ipfs"
 edition.workspace = true
 version.workspace = true
 authors.workspace = true
@@ -12,6 +12,7 @@ wstd = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 anyhow = { workspace = true }
+wit-bindgen = { workspace = true }
 wit-bindgen-rt = { workspace = true, features = ["bitflags"] }
 alloy-sol-types = { workspace = true }
 alloy-primitives = { workspace = true, features = ["serde"] }
@@ -33,3 +34,10 @@ opt-level = "s"
 debug = false
 strip = true
 lto = true
+
+[package.metadata.component]
+package = "component:wavs-ipfs"
+
+[package.metadata.component.target]
+path = "./wit/world.wit"
+
