--- a/components/dao-agent/Cargo.toml
+++ b/components/dao-agent/Cargo.toml
@@ -40,10 +40,12 @@ lto = true
 [package.metadata.component]
 package = "component:dao-agent"
 
+# target = "wavs:worker/layer-trigger-world@0.3.0"
+
 [package.metadata.component.target]
 path = "./wit"
 
 # Add dependencies on the wavs-llm component interfaces and layer-trigger-world
-[package.metadata.component.dependencies]
+[package.metadata.component.target.dependencies]
 "wavs:agent" = { path = "../../packages/llm/wit" }
 "wavs:worker" = "0.3.0"
