updated to v0.4.0-beta.1

--- a/components/dao-agent/Cargo.toml
+++ b/components/dao-agent/Cargo.toml
@@ -8,7 +8,7 @@ repository.workspace = true
 
 [dependencies]
 wavs-llm = { workspace = true }
-wavs-wasi-chain = { workspace = true }
+wavs-wasi-utils = { workspace = true }
 wstd = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
