--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ resolver = "2"
 
 [workspace.package]
 edition = "2021"
-version = "0.3.0"
+version = "0.4.0-beta.1"
 license = "MIT"
 authors = ["Lay3r Labs Team"]
 repository = "https://github.com/Lay3rLabs/wavs"
@@ -19,7 +19,7 @@ wit-bindgen-rt = {version = "0.39.0", features = ["bitflags"]}
 wit-bindgen = "0.39.0"
 wstd = "0.5.1"
 wasi = "0.14.1"
-wavs-wasi-chain = "0.3.0"
+wavs-wasi-utils = "=0.4.0-beta.1"
 
 # WAVS
 wavs-llm = { path = "./packages/llm" }
@@ -30,15 +30,15 @@ serde_json = "1.0.138"
 anyhow = "1.0.95"
 
 ## Alloy
-alloy-dyn-abi = "0.8.13"
-alloy-json-abi = "0.8.13"
-alloy-primitives = "0.8.13"
-alloy-sol-macro = { version = "0.8.13", features = ["json"]}
-alloy-sol-types = "0.8.13"
-alloy-network = "0.11.1"
-alloy-provider = { version = "0.11.1", default-features = false, features = ["rpc-api"] }
-alloy-rpc-types = "0.11.1"
-alloy-transport-http = { version = "0.11.1", default-features = false }
+alloy-dyn-abi = "1.1.0"
+alloy-json-abi = "1.1.0"
+alloy-primitives = "1.1.0"
+alloy-sol-macro = { version = "1.1.0", features = ["json"]}
+alloy-sol-types = "1.1.0"
+alloy-network = "0.14.0"
+alloy-provider = { version = "0.14.0", default-features = false, features = ["rpc-api"] }
+alloy-rpc-types = "0.14.0"
+alloy-transport-http = { version = "0.14.0", default-features = false }
 
 ## Common dependencies
 hex = "0.4.3"
