--- a/packages/ipfs/Cargo.toml
+++ b/packages/ipfs/Cargo.toml
@@ -7,7 +7,7 @@ rust-version.workspace = true
 repository.workspace = true
 
 [dependencies]
-wavs-wasi-chain = { workspace = true }
+wavs-wasi-utils = { workspace = true }
 wstd = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
